// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-thumbnail-view component Render with data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span>
                        <span
                            class="control-label">
                            Boolean
                            </span>
                            </label>
                            </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 1 </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 1 </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 2 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 2 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 3 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 3 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data 3 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 1 bis </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 1 </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 2 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 2 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 3 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 3 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render without data 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span>
                        <span
                            class="control-label">
                            Boolean
                            </span>
                            </label>
                            </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 1 </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 1 </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 2 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 2 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 3 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 3 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 2 2`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 1 bis </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 1 </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 2 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 2 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span> Label 3 </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span> New </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span> 3 </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render without data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render without data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="tooltip is-primary is-top is-medium"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>  </span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">State</label> <span>  ---  </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>  </span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;
